<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/activity_titlebar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textSize="12sp"
            android:text="@string/forgetpwd_tips"
            />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:lines="1"
            android:maxLength="20"
            android:padding="10dp"
            android:text="@string/phoneNum"
            android:textColor="@color/text_login_gray"
            android:textSize="15sp" />

        <com.jiajun.demo.views.ClearEditText
            android:layout_marginRight="10dp"
            android:id="@+id/forget_password_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_white_solid_r3"
            android:inputType="phone"
            android:padding="10dp"
            android:textSize="15sp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:maxLength="10"
            android:padding="10dp"
            android:text="@string/verificationCode"
            android:textColor="@color/text_login_gray"
            android:textSize="15sp" />

        <com.jiajun.demo.views.ClearEditText
            android:layout_marginRight="10dp"
            android:id="@+id/verification_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:inputType="phone"
            android:lines="1"
            android:padding="10dp"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/get_forget_password_Code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_login"
            android:padding="10dp"
            android:text="@string/register_getcode"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:text="@string/setpwd"

            android:textColor="@color/text_login_gray"
            android:textSize="15sp" />

        <com.jiajun.demo.views.PassWordEditText
            android:layout_marginRight="10dp"
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="10dp"
            android:textSize="14sp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:padding="10dp"
            android:text="@string/confirmpwd"
            android:textColor="@color/text_login_gray"
            android:textSize="15sp" />

        <com.jiajun.demo.views.PassWordEditText
            android:layout_marginRight="10dp"
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            android:inputType="textPassword"
            android:maxLength="20"
            android:padding="10dp"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/forgetPwd_submit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login"
        android:gravity="center"
        android:text="@string/common_positive"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>