<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_white" >

        <LinearLayout
            android:id="@+id/layout_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/version_update"
                android:textColor="@color/textGreen"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/dialog_msg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/version_update_message"
                android:textSize="14sp"
                android:singleLine="true"
                android:textColor="@color/text_black" />

        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/layout_msg"
            android:background="#FFE1E1E1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancel"
                android:textColor="@color/textGreen" />

            <View
                android:id="@+id/dialog_line"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#FFE1E1E1" />

            <TextView
                android:id="@+id/dialog_submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/sure"
                android:textColor="@color/textGreen" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>