<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/activity_titlebar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/forgetpwd_tips"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:singleLine="true"
                    android:maxLength="20"
                    android:padding="10dp"
                    android:text="@string/name"
                    android:textColor="@color/text_login_gray"
                    android:textSize="15sp" />

                <com.jiajun.demo.views.ClearEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/shape_white_solid_r3"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:lines="1"
                    android:maxLength="20"
                    android:padding="10dp"
                    android:text="@string/idCard"
                    android:textColor="@color/text_login_gray"
                    android:textSize="15sp" />

                <com.jiajun.demo.views.ClearEditText
                    android:id="@+id/idCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/shape_white_solid_r3"
                    android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:lines="1"
                    android:maxLength="20"
                    android:padding="10dp"
                    android:text="@string/phoneNum"
                    android:textColor="@color/text_login_gray"
                    android:textSize="15sp" />

                <com.jiajun.demo.views.ClearEditText
                    android:id="@+id/phoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/shape_white_solid_r3"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:text="@string/verificationCode"
                    android:textColor="@color/text_login_gray"
                    android:textSize="15sp" />

                <com.jiajun.demo.views.ClearEditText
                    android:id="@+id/verification_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:inputType="phone"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textSize="15sp" />


                <TextView
                    android:id="@+id/get_forget_password_Code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/shape_login"
                    android:padding="10dp"
                    android:text="@string/register_getcode"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:lines="1"
                    android:maxLength="20"
                    android:padding="10dp"
                    android:text="@string/pwd"
                    android:textColor="@color/text_login_gray"
                    android:textSize="15sp" />
<com.jiajun.demo.views.PassWordEditText
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/shape_white_solid_r3"
                    android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:lines="1"
                    android:maxLength="20"
                    android:padding="10dp"
                    android:text="@string/confirmPwd"
                    android:textColor="@color/text_login_gray"
                    android:textSize="15sp" />

                <com.jiajun.demo.views.PassWordEditText
                    android:id="@+id/confirmPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/shape_white_solid_r3"
                    android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:visibility="gone"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
                    android:lines="1"
                    android:maxLength="20"
                    android:padding="10dp"
                    android:text="@string/email"
                    android:textColor="@color/text_login_gray"
                    android:textSize="15sp" />

                <com.jiajun.demo.views.ClearEditText
                    android:visibility="gone"
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/shape_white_solid_r3"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/recommend_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/text_yes"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:padding="10dp"
                    android:text="@string/isHasRecommend"
                    android:textColor="@color/text_login_gray"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/image_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="60dp"
                    android:layout_toRightOf="@id/text_yes"
                    android:clickable="true"
                    android:src="@drawable/radio_white" />

                <TextView
                    android:id="@+id/text_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/image_yes"
                    android:text="@string/yes"
                    android:textColor="@color/text_login_gray"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/image_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:layout_toRightOf="@+id/text_no"
                    android:clickable="true"
                    android:src="@drawable/radio_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/image_no"
                    android:text="@string/no"
                    android:textColor="@color/text_login_gray"
                    android:textSize="15sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/hasRecommend_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:padding="10dp"
                    android:text="@string/recommendNum"
                    android:textColor="@color/text_login_gray"
                    android:textSize="15sp" />

                <com.jiajun.demo.views.ClearEditText
                    android:id="@+id/recommendNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/shape_white_solid_r3"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/noRecommend_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/group"
                        android:textColor="@color/text_login_gray"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/shape_white_solid_r3"
                        android:drawableRight="@drawable/more_gray"
                        android:padding="10dp"
                        android:textColor="@color/text_login_gray"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/branch"
                        android:textColor="@color/text_login_gray"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/branch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/shape_white_solid_r3"
                        android:drawableRight="@drawable/more_gray"
                        android:padding="10dp"
                        android:textColor="@color/text_login_gray"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:layout_marginBottom="20dp"
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/shape_login"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>